fixed a bug where if the title text was too large for the most viewed stat, it would mess up the hole dashboard for large screen and higher

--- a/wwwroot/css/AdminPage.css
+++ b/wwwroot/css/AdminPage.css
@@ -98,7 +98,7 @@ body {
   opacity: 1;
   color: #6c757d;
 }
-/* Dashboard Styles */
+/*-------------------------------------- Dashboard Styles --------------------------------------*/
 
 .dashboard-container {
   max-width: 1415px;
@@ -266,12 +266,20 @@ box-shadow: 0px 10px 30px rgba(138, 197, 62, 0.4);
 .stats-card .subtitle {
   font-size: 12px;
   opacity: 0.8;
-  margin-bottom: 8px;
+  margin-bottom: 4px;
 }
 
-.stats-card .viewed-text {
-  font-size: 14px;
-  font-weight: 500;
+
+.stats-card .subtitle {
+  font-size: 12px;
+  opacity: 0.8;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3; /* Limit to 4 lines */
+  line-clamp: 4;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 /* Buttons */
@@ -342,6 +350,20 @@ box-shadow: 0px 10px 30px rgba(138, 197, 62, 0.4);
   padding-left: 0;
 }
 
+@media (min-width: 1200px) {
+  .stats-card {
+    max-width: 198px;
+  }
+
+  #admin-stats-most-viewed {
+    margin-bottom: 3px;
+  }
+  
+  .stats-card-green {
+    padding: clamp(10px, 2.5vw, 20px);
+    max-height: 141px;
+  }
+}
 @media (max-width: 1200px) {
 .chart-section:first-child {
   margin-inline-end: 0px;
@@ -400,6 +422,9 @@ box-shadow: 0px 10px 30px rgba(138, 197, 62, 0.4);
     font-size: 28px;
   }
 }
+
+
+/*---------------------------- Search, Section and Document type Bar ----------------------------*/
 
 :root {
   --header-height: 100px;
